# HRMS

./: Dockerfile  Pipfile  app.py  pyproject.toml  requirements.txt  requriements.txt  templates.code-workspace
app/: app.py
app/templates/: admin_expense.html  announcement.html  base_nav.html  employee.html  expense.html  invoice.html  leave.html  register.html  salary_slip.html  stipend.html  supadmin_payroll.html  welcome.html
static/: admin_announcement.css  admin_announcement.js  admin_attendance.css  admin_attendance.js  admin_dashboard.css  admin_dashboard.js  admin_employee.css  admin_employee.js  admin_expense.css  admin_expense.js  admin_leave.css  admin_leave.js  admin_payroll.css  admin_payroll.js  attendance.css  attendance.js  contact.css  contact.js  dashboard.css  dashboard.js  employee.js  expense.js  invoice.css  invoice.js  leave.css  leave.js  register.css  register.js  signin.css  signin.js  welcome.css
static/uploads/: B13_Research Paper.docx  B13_Research_Paper_Final_1.docx  Data Analysis and Prediction on Road Accident 3.docx  Data_Analysis__Prediction_Of_Road_Accident_1.docx  Mansi_Patel_resfinal_1_2.docx  Ngnix.docx
templates/: admin_announcement.html  admin_attendance.html  admin_contact.html  admin_dashboard.html  admin_employee.html  admin_leave.html  attendance.html  contact.html  dashboard.html  signin.html  supadmin_attendance.html  supadmin_dashboard.html
uploads/: SAMPLE_INVOICE.docx
