[tool.poetry]
name = "flask-hrms"
version = "0.1.0"
description = "Your Flask HRMS application"
authors = ["Mansi Patel <mansikrpatel03@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.0"
flask-login = "^0.6.2"
psycopg2 = "^2.9.3"
werkzeug = "^2.0.0"
gunicorn = "^20.1.0"
flask-session = "^0.4.0"
psycopg2-binary = "^2.9.10"
flask-cors = "^3.0.10"  # Enables frontend-backend communication
python-dotenv = "^1.0.0"  # Loads environment variables

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
